--- a/src/main/resources/META-INF/resources/style.css
+++ b/src/main/resources/META-INF/resources/style.css
@@ -3,71 +3,111 @@
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", Arial, sans-serif;
+    background-color: lightseagreen;
 }
+
+::-moz-selection {
+    color: red;
+    background-color: white;
+}
+
+::selection {
+    color: red;
+    background-color: white;
+}
+
 h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.5rem;
     font-weight: 400;
     line-height: 1.5;
 }
+
 h1 { font-size: 2.25rem; }
+
 h2 { font-size: 1.6rem }
+
 h3 { font-size: 1.5rem }
+
 h4 { font-size: 1.4rem }
+
 h5 { font-size: 1.25rem }
+
 h6 { font-size: 1rem }
+
 p {
     padding: .15rem 0;
     margin: 0;
     line-height: 1.3rem;
 }
-a {
-    text-decoration: underline;
-    color: #1259A5;
-}
-a:hover, a:active { color: #c00; }
-.grid {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    clear: both;
-}
-.header-wrapper {
-    padding: 0 13rem;
-    background: black;
-}
-.content-wrapper {
-    padding: 0 13rem;
-    background: white;
-}
-.header {
-    background-position: 0 1rem;
-    min-height: 60px;
-    grid-column: span 12;
-}
-.left-column {
-    grid-column: span 8;
-    padding-right: 3rem;
-}
-.left-column p {
-    padding: .15rem 0;
+
+ul {
+    list-style-type: none;
+    overflow: hidden;
     margin: 0;
-    font-weight: 300;
+    padding: 0;
+    background-color: yellowgreen;
 }
-.left-column .cta-button {
-    margin: 20px 0;
-    display: inline-block;
-    padding: 1rem 2rem;
-    background-color: #4695EB;
-    font-weight: 600;
-    color: white;
+
+li {
+    float: left;
+    text-align: center;
+    border-right: 1px solid #BBBBBB;
+}
+
+li:last-child {
+    border-right: 2px;
+}
+
+a {
+    display: block;
+    padding: 10px;
     text-decoration: none;
-    text-transform: uppercase;
+    background-color: #29F9F9;
 }
+
+a:hover {
+    color: blue;
+    background-color: green;
+}
+
+a:active {
+    color: #c00;
+}
+
+#inputs {
+    text-align-last: center;
+}
+
+footer > p {
+    text-align: center;
+}
+
+hr {
+    color: black;
+}
+
+textarea {
+    padding: 5px;
+    margin: 15px 20px 10px 20px;
+    border-radius: 10px;
+    width: 95%;
+    height: 5rem;
+    background-color: beige;
+    resize: none;
+    border-width: 1px;
+    border-color: black;
+    box-shadow: 0px 4px 0px 4px rgba(0, 0, 0, .2), 0px 5px 2px 1px rgba(0, 0, 0, .1);
+}
+
+#textAreaOutput {
+    cursor: not-allowed;
+}
+
+#textAreaOutput::selection {
+    color: inherit;
+    background-color: inherit;
+}
+
 @media screen and (max-width: 1023px) {
-    .header-wrapper {
-        padding: 0 1rem;
-        background: black;
-    }
-    .left-column {
-        grid-column: span 12;
-    }
+
 }
